revamp of services page, added new image assets refined home page content

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,29 @@
   <title>Igicucon</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- HTML Meta Tags -->
+  <title>Igicu Consultancy</title>
+  <meta name="description" content="Transforming ideas into strong and impactful visualizations.">
+
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Igicu Consultancy">
+  <meta itemprop="description" content="Transforming ideas into strong and impactful visualizations.">
+  <meta itemprop="image" content="">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://wess58.github.io/igicu">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Igicu Consultancy">
+  <meta property="og:description" content="Transforming ideas into strong and impactful visualizations.">
+  <meta property="og:image" content="assets/images/logo-alt.svg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Igicu Consultancy">
+  <meta name="twitter:description" content="Transforming ideas into strong and impactful visualizations.">
+  <meta name="twitter:image" content="assets/images/logo-alt.svg">
+
+  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 
 <body>
