--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <meta name="twitter:description" content="Transforming ideas into strong and impactful visualizations.">
   <meta name="twitter:image" content="assets/images/logo-alt.svg">
 
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
